# depl-dictionary

./: .buildconfig  README.md  meson.build
src/: depl-dictionary.gresources.xml  depl-dictionary.plugin  depl-dictionary.py  meson.build
src/gtk/: menus.ui
